# geospacelab-dashboard

./: .env.example  .gitignore  LICENSE  README.md  app.py  pyproject.toml
deploy/: Dockerfile  entrypoint.sh
scripts/: gen_swarm_catalog.py
src/gsl_dashboard/: __init__.py  bootstrap.py  capabilities.py  codegen.py  credentials.py  errors.py  preview_worker.py  runner.py  settings.py  spec.py  state.py
src/gsl_dashboard/bookmarks/: __init__.py  seeds.yaml  store.py
src/gsl_dashboard/catalog/: __init__.py  models.py  registry.py  sources_core.yaml  sources_swarm.yaml
src/gsl_dashboard/ui/: __init__.py  layout.py  panes.py  widgets.py
tests/: test_bookmarks.py  test_catalog.py  test_catalog_introspection.py  test_codegen.py  test_preview.py  test_runner_dispatch.py
